nginx_demo/lifecycle-demo.yaml
apiVersion: v1
kind: Pod
metadata:
  name: lifecycle-demo
spec:
  shareProcessNamespace: true
  containers:
  - name: lifecycle-demo-container
    image: nginx:1.15
    imagePullPolicy: Never
    lifecycle:
      postStart:
        exec:
          command: ["/bin/sh", "-c", "echo Hello from the postStart handler > /usr/share/message"]
      preStop:
        exec:
          command: ["/usr/sbin/nginx","-s","quit"]
  - name: shell
    image: busybox:1.30
    imagePullPolicy: Never
    stdin: true
    tty: true
